--- a/lib/watirsplash/generators/templates/new_project/Gemfile
+++ b/lib/watirsplash/generators/templates/new_project/Gemfile
@@ -1,6 +1,6 @@
 source :rubygems
 
 # load WatirSplash specific dependencies
-eval(File.read("Gemfile.watirsplash"))
+instance_eval(File.read("Gemfile.watirsplash"))
 
 # add your project specific dependencies here
