--- a/lib/watirsplash/generators/templates/new_project/Gemfile
+++ b/lib/watirsplash/generators/templates/new_project/Gemfile
@@ -1,6 +1,16 @@
 source :rubygems
 
-# load WatirSplash specific dependencies
-instance_eval(File.read("Gemfile.watirsplash"))
+# load WatirSplash dependencies
+gem "watirsplash", "1.5.0"
+gem "rspec", "~>2.6.0"
+
+platforms :mingw, :mswin do
+    gem "watir", "1.9.0"
+    gem "win32screenshot", "1.0.4", :require => "win32/screenshot"
+end
+
+gem "watir-webdriver", "0.2.4"
+gem "firewatir", "1.9.0"
+gem "rake", "0.8.7"nstance_eval(File.read("Gemfile.watirsplash"))
 
 # add your project specific dependencies here
