--- a/lib/watirsplash/generators/templates/new_project/Gemfile
+++ b/lib/watirsplash/generators/templates/new_project/Gemfile
@@ -2,7 +2,6 @@ source :rubygems
 
 # load WatirSplash dependencies
 gem "watirsplash", "1.5.0"
-gem "rspec", "~>2.6.0"
 
 platforms :mingw, :mswin do
     gem "watir", "1.9.0"
@@ -11,6 +10,6 @@ end
 
 gem "watir-webdriver", "0.2.4"
 gem "firewatir", "1.9.0"
-gem "rake", "0.8.7"nstance_eval(File.read("Gemfile.watirsplash"))
+gem "rake", "0.8.7"
 
 # add your project specific dependencies here
