getting rid of Jeweler

--- a/lib/watirsplash/generators/templates/new_project/Gemfile
+++ b/lib/watirsplash/generators/templates/new_project/Gemfile
@@ -1,7 +1,7 @@
 source :rubygems
 
-# load WatirSplash dependencies
-gem "watirsplash", "1.5.0"
+# load WatirSplash and it's dependencies
+gem "watirsplash", "1.5.0" unless File.exists?("watirsplash.gemspec")
 
 platforms :mingw, :mswin do
     gem "watir", "1.9.0"
@@ -11,5 +11,7 @@ end
 gem "watir-webdriver", "0.2.4"
 gem "firewatir", "1.9.0"
 gem "rake", "0.8.7"
+
+gemspec if File.exists?("watirsplash.gemspec")
 
 # add your project specific dependencies here
